--- a/kubernetes/cnpg/k3s-default-patch/charts/cloudnative-pg-operator/helmfile.yaml
+++ b/kubernetes/cnpg/k3s-default-patch/charts/cloudnative-pg-operator/helmfile.yaml
@@ -3,7 +3,6 @@ repositories:
     url: https://cloudnative-pg.github.io/charts
 
 releases:
-  # Operator
   - name: cloudnative-pg-operator
     chart: cnpg/cloudnative-pg
     namespace: cnpg
@@ -11,3 +10,9 @@ releases:
     version: 0.23.0
     values:
       - ./values.yaml
+    hooks:
+      - events: ["postsync"]
+        command: "sh"
+        args:
+          - "-c"
+          - "curl -sSfL https://github.com/cloudnative-pg/cloudnative-pg/raw/main/hack/install-cnpg-plugin.sh | sudo sh -s -- -b /usr/local/bin"
