[change] placeholder for argocd secret

--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/01-basic-cluster/k3s-default/charts/argocd/templates/secrets/argocd-secret.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/01-basic-cluster/k3s-default/charts/argocd/templates/secrets/argocd-secret.yaml
@@ -8,9 +8,9 @@ metadata:
 stringData:
   url: https://github.com/technicaldirector
   type: helm
-  githubAppID: "1144539"
-  githubAppInstallationID: "61013408"
+  githubAppID: "<your-app-id>"
+  githubAppInstallationID: "<your-installation-id>"
   githubAppPrivateKey: |
     -----BEGIN RSA PRIVATE KEY-----
-    ...
+    <your-private-key-here>
     -----END RSA PRIVATE KEY-----
