--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/01-basic-cluster/k3s-default/charts/argocd/templates/ingresses/argocd-ingress.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/01-basic-cluster/k3s-default/charts/argocd/templates/ingresses/argocd-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx  # Ensure this matches your Ingress Controller
   rules:
-  - host: argocd.k3sportable.test
+  - host: argocd.yourdomain.test
     http:
       paths:
       - path: /
