--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/k3s-default-patch/charts/nextjs/templates/ingresses/nextjs-ingress.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/k3s-default-patch/charts/nextjs/templates/ingresses/nextjs-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx  # Ensure this matches your Ingress Controller
   rules:
-  - host: nextjs.yourdomain.test
+  - host: nextjs.yourdomain.com
     http:
       paths:
       - path: /
