--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/03-cert-manager/cert-manager/k3s-default-patch/charts/argocd/templates/ingresses/argocd-ingress.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/03-cert-manager/cert-manager/k3s-default-patch/charts/argocd/templates/ingresses/argocd-ingress.yaml
@@ -1,14 +1,13 @@
-kind: Ingress
 apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: argocd-server-ingress
   namespace: argocd
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
-  ingressClassName: nginx  # Ensure this matches your Ingress Controller
+  ingressClassName: nginx  # Must match your Ingress Controller
   rules:
   - host: argocd.yourdomain.com
     http:
@@ -17,9 +16,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: argocd-server  # Match the actual service name
-            port:
-              number: 443  # Ensure the service has this port exposed
+            name: argocd-server
+            port: 
+              number: 443
   tls:
   - hosts:
     - argocd.yourdomain.com
