--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/03-cert-manager/cert-manager/k3s-default-patch/charts/root-app/templates/reflector-app.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/03-cert-manager/cert-manager/k3s-default-patch/charts/root-app/templates/reflector-app.yaml
@@ -1,21 +1,19 @@
 kind: Application
 apiVersion: argoproj.io/v1alpha1
 metadata:
-  name: cert-manager-app
+  name: reflector-app
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/technicaldirector/k3s-default.git
-    path: charts/cert-manager/
+    repoURL: https://github.com/technicaldirector/kubestudio.git
+    path: charts/reflector/
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: kube-system
   syncPolicy:
     automated:
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
