[change] namespace of cnpg operator

--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/05-cloudnativepg/cnpg/k3s-default-patch/charts/cloudnative-pg-operator/kustomization.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/05-cloudnativepg/cnpg/k3s-default-patch/charts/cloudnative-pg-operator/kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cnpg
 helmCharts:
 - name: cloudnative-pg # Chart name
-  namespace: cnpg # Namespace to deploy the chart
+  namespace: cnpg-system # Namespace to deploy the chart
   releaseName: cloudnative-pg-operator # Release name
   repo: https://cloudnative-pg.github.io/charts
   valuesFile: values.yaml
