--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/nextjs/.github/workflows/ci-action.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/nextjs/.github/workflows/ci-action.yaml
@@ -92,7 +92,8 @@ jobs:
           git config --global user.email ${{ secrets.GHUB_EMAIL }}
           git config --global user.name ${{ github.actor }}
           echo ${{ github.sha }}
+          # sed -i "s#${{ secrets.GHUB_LOWERCASE_USERNAME }}.*#${{ secrets.GHUB_LOWERCASE_USERNAME }}/nextjs:${{ github.sha }}#Ig" charts/nextjs/templates/deployments/nextjs-deployment.yaml
           sed -i "s#${{ secrets.DOCKER_USERNAME }}.*#${{ secrets.DOCKER_USERNAME }}/nextjs:${{ github.sha }}#Ig" charts/nextjs/templates/deployments/nextjs-deployment.yaml
-          git commit -am "Update image for - ${{ github.sha }}"
+          git commit -am "[action] Update image for - ${{ github.sha }}"
       - run: echo ${{ github }}
       - run: git push origin main
