--- a/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/nextjs/.github/workflows/ci-action.yaml
+++ b/guided-series/kubernetes/deploy-a-cluster-from-scratch/04-ci-cd-workflow/gitops/nextjs/.github/workflows/ci-action.yaml
@@ -5,56 +5,35 @@ name: Build Step
 on:
   push:
     branches: ['main']
-#   pull_request:
-#     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.20.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-
-  test-stage:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Running Tests
-        uses: actions/checkout@v3
-      - run: echo "running"
-
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-latest
-    needs: ['build', 'test-stage']
+    environment: production
 
     # steps to perform in job
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      # Add this step to create .env.production
+      - name: Create .env file for Next.js
+        run: |
+          cat <<EOF > .env.production
+          DATABASE_URI=${{ secrets.DATABASE_URI }}
+          PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }}
+          NEXT_PUBLIC_SERVER_URL=${{ vars.NEXT_PUBLIC_SERVER_URL }}
+          CRON_SECRET=${{ secrets.CRON_SECRET }}
+          PREVIEW_SECRET=${{ secrets.PREVIEW_SECRET }}
+          EOF
+        shell: bash
 
       # setup Docker buld action
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to Github Packages
         uses: docker/login-action@v3
@@ -62,16 +41,15 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHUB_TOKEN }}
-
-      - name: Build image and push to Docker Hub and GitHub Container Registry
+          
+      - name: Build image and push to GitHub Container Registry
         uses: docker/build-push-action@v6
         with:
           # relative path to the place where source code with Dockerfile is located
           context: ./
           # Note: tags has to be all lower-case
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/nextjs:${{ github.sha }} 
-            ghcr.io/${{ secrets.GHUB_LOWERCASE_USERNAME }}/nextjs:${{ github.sha }}
+            ghcr.io/${{ secrets.GHUB_LOWERCASE_USERNAME }}/kubefolio:${{ github.sha }}
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
 
@@ -82,9 +60,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: ['build-and-push-docker-image']
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          repository: ${{ github.actor }}/k3s-default
+          repository: ${{ github.actor }}/kubestudio
           ref: 'main'
           token: ${{ secrets.GHUB_TOKEN }}
       - name: setup git config
@@ -92,8 +70,7 @@ jobs:
           git config --global user.email ${{ secrets.GHUB_EMAIL }}
           git config --global user.name ${{ github.actor }}
           echo ${{ github.sha }}
-          # sed -i "s#${{ secrets.GHUB_LOWERCASE_USERNAME }}.*#${{ secrets.GHUB_LOWERCASE_USERNAME }}/nextjs:${{ github.sha }}#Ig" charts/nextjs/templates/deployments/nextjs-deployment.yaml
-          sed -i "s#${{ secrets.DOCKER_USERNAME }}.*#${{ secrets.DOCKER_USERNAME }}/nextjs:${{ github.sha }}#Ig" charts/nextjs/templates/deployments/nextjs-deployment.yaml
+          sed -i "s#${{ secrets.GHUB_LOWERCASE_USERNAME }}.*#${{ secrets.GHUB_LOWERCASE_USERNAME }}/kubefolio:${{ github.sha }}#Ig" charts/nextjs/templates/deployments/nextjs-deployment.yaml
           git commit -am "[action] Update image for - ${{ github.sha }}"
       - run: echo ${{ github }}
       - run: git push origin main
